[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["V D Panduranga Sai Guptha"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.7"
langgraph = "^0.2.45"
chromadb = "^0.5.18"
pymongo = "^4.10.1"
pydantic = "^2.9.2"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
langchain-community = "^0.3.5"
openai = "^1.54.3"
transformers = "^4.46.2"
pillow = "^11.0.0"
torch = "^2.5.1"
pytesseract = "^0.3.13"
networkx = "^3.4.2"
langchain-openai = "^0.2.6"
langchain-chroma = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
